--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,12 @@ test_temp*.py
 Thumbs.db
 ehthumbs.db
 Desktop.ini
+
+# SECURITY: Never commit files with API keys or sensitive configuration
+claude_desktop_config_fixed.json
+claude_desktop_config.json
+*_config_fixed.json
+*api_keys*
+*.key
+*.secret
+*credentials*
