--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,17 @@
-# Autonomous MCP Agent Requirements
+# Autonomous MCP Agent Dependencies
+# Production ready autonomous execution
 
 # Core dependencies
-dataclasses>=0.6  # For Python < 3.7 compatibility
-typing-extensions>=4.0.0  # Extended typing support
-psutil>=5.9.0  # System and process monitoring
+asyncio-tools>=1.0.0
+dataclasses-json>=0.5.0
+typing-extensions>=4.0.0
 
-# Testing
+# MCP Protocol
+mcp>=1.0.0
+
+# Optional testing dependencies
 pytest>=7.0.0
-pytest-cov>=4.0.0
-pytest-mock>=3.10.0
+pytest-asyncio>=0.21.0
 
-# Development
-black>=23.0.0  # Code formatting
-flake8>=6.0.0  # Linting
-mypy>=1.0.0  # Type checking
-
-# Documentation
-sphinx>=6.0.0  # Documentation generation
-sphinx-rtd-theme>=1.2.0  # ReadTheDocs theme
-
-# Future dependencies (for upcoming phases)
-# aiohttp>=3.8.0  # Async HTTP client
-# httpx>=0.24.0  # Modern HTTP client
-# pydantic>=2.0.0  # Data validation
+# Optional monitoring
+logging-enhanced>=1.0.0
